fix: modify functions related to data update
